<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".ui.list.ListFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_edit_text_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        app:boxBackgroundColor="@color/app_background"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/pink"
        app:cursorColor="@color/pink"
        app:hintTextColor="@color/pink"
        app:layout_constraintEnd_toStartOf="@id/search_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_text_view_hint"
            android:paddingStart="0dp"
            android:paddingTop="24dp"
            android:paddingEnd="0dp"
            android:paddingBottom="4dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:backgroundTint="@color/search_button_color"
        android:padding="15dp"
        android:text="@string/search_button_text"
        android:textColor="@color/black"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="@id/search_edit_text_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/search_edit_text_container" />

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_edit_text_container" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/general_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_image" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/repo_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name" />

</androidx.constraintlayout.widget.ConstraintLayout>