<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ui.details.DetailsFragment">

    <TextView
        android:id="@+id/repo_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textColor="@color/general_text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/repo_description_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textColor="@color/general_text" />

    <TextView
        android:id="@+id/repo_updated_at_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textColor="@color/general_text" />

    <TextView
        android:id="@+id/repo_stargazers_count_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textColor="@color/general_text" />

    <TextView
        android:id="@+id/repo_forks_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:textColor="@color/general_text" />

    <TextView
        android:id="@+id/total_forks_count_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/general_text" />

</LinearLayout>